--- a/gardenbar.html
+++ b/gardenbar.html
@@ -249,7 +249,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#">
-                                        <img src="assets/images/lounge/Chivita-100% 2.jpg" alt="">
+                                        <img src="assets/images/lounge/Chivita-100%.jpg" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
@@ -432,7 +432,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#">
-                                        <img src="assets/images/lounge/beta-malt.jpg" alt="">
+                                        <img src="assets/images/lounge/beta-malt.png" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
@@ -484,7 +484,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#">
-                                        <img src="assets/images/lounge/Coke-35cl.jpg" alt="">
+                                        <img src="assets/images/lounge/coooke.jpg" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
@@ -588,7 +588,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#">
-                                        <img src="assets/images/lounge/Teem.jpg" alt="">
+                                        <img src="assets/images/lounge/Climax-can.jpg" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
@@ -720,7 +720,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#">
-                                        <img src="assets/images/lounge/plastic-pepsi.jpg" alt="">
+                                        <img src="assets/images/lounge/pepsi.jpg" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
